# computer-flo

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: backends.md  ship-to-agents.md  supervision.md
docs/plans/: 2026-05-10-computer-flo-foundation.md
src/computer_flo/: __init__.py  adapters.py  cli.py  human_mouse.py  mcp_server.py  runner.py  visible.py  visible_cli.py
src/computer_flo/backends/: __init__.py  linux.py  macos.py  selector.py
tests/: test_adapter_registry.py  test_cli.py  test_cli_extended.py  test_extended_linux_backend.py  test_human_mouse.py  test_linux_backend.py  test_macos_backend.py  test_macos_execution_boundary.py  test_macos_native_fallback.py  test_mcp_server.py  test_v04_upgrade.py  test_visible.py
tools/: build-cursor-glow.sh  cursor_glow.swift
workflows/gohighlevel-agent/: .gitignore  AI_BUILDER_PROMPT_TEMPLATE.md  API_CAPABILITY_MATRIX.md  BROWSER_ISOLATION.md  README.md  env.example  ghl_agent.py
workflows/gohighlevel-agent/client-profiles/: tax-mogul-os.json
workflows/gohighlevel-agent/examples/: ghl-workflow-blueprints.example.json
